# robot-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.server.yml  pyproject.toml
back/: alembic.ini  config.py  database.py  main.py  models.py  schemas.py
back/alembic/: env.py
back/alembic/versions/: 001_initial.py  002_full_schema.py  003_sync_models.py  004_simplify_model_schema.py  005_device_models.py  006_library_models.py  007_device_fundo.py  008_recordings.py  009_reconcile_legacy_schema.py  (+3 more)
back/middleware/: security_headers.py  server_auth.py
back/routes/: README.md  admin_models.py  auth.py  camellones.py  config_routes.py  counting.py  dashboard.py  device_context.py  devices.py  empresas.py  fundos.py  locations.py  models_local.py  recordings.py  setup.py  stream.py  stream_wc.py  stream_ws.py  sync.py  users.py
back/scripts/: create_admin.py  open_zed2i.py  stream_webrtc.py
back/services/: auth.py  auth_guard.py  camera.py  camera_client.py  camera_control_client.py  camera_settings.py  h264_encoder.py  lockout.py  nvenc_codec.py  nvenc_init.py  rate_limit.py  recording_client.py  seed_library_models.py  storage.py  stream_broadcaster.py  sync_loop.py  sync_pull.py  sync_pull_context.py  sync_push.py  sync_receive.py  sync_recordings_upload.py  wc_broadcaster.py
camera_worker/: README.md  pyproject.toml
camera_worker/camera_worker/: main.py
conversion_worker/: README.md  pyproject.toml
conversion_worker/conversion_worker/: converter.py  main.py
deploy/: README.md  ROBOT_SETUP.md  camera-worker.service  conversion-worker.service  inference-worker.service  install.sh  nginx.conf.template  nginx.robot.conf.template  nginx.server.conf.template  recording-worker.service  robot-platform.service  setup-tls.sh
docs/: documentacion_tecnica_avance.docx  documentacion_tecnica_avance.md
docs/diagrams/: arquitectura_actual.d2
docs/informes/: 26_03_01_plan_de_desarrollo_v1.docx  26_03_02_plan_de_desarrollo_v2.docx  26_03_03_plan_de_desarrollo_v3.docx  26_04_07_avance_de_desarrollo.docx  26_04_07_avance_de_desarrollo_v1.docx  26_05_05_avance_de_desarrollo_v2.docx  26_05_05_avance_de_desarrollo_v2.md  26_05_05_informe_4_unificado.docx  26_05_05_informe_4_unificado.md  generate.js  package-lock.json
docs/roadmap/: generate_from_md.js
front/: index.html  package-lock.json  package.json  plan.md  tsconfig.app.json  vite.config.ts
front/public/: manifest.json
front/src/: App.tsx  main.tsx
inference/: pyproject.toml
inference/inference_worker/: detector.py  main.py  protocol.py
plans/: counting-app.md  platform-modules.md
recording_worker/: README.md  pyproject.toml
recording_worker/recording_worker/: encoder.py  main.py
spec/: backlog.md  mission.md  roadmap.md  tech-stack.md
spec/05-05-26-informe-4-unificado/: plan.md  requirements.md  validation.md
spec/06-05-26-acceso-publico-server-auth/: plan.md  requirements.md  validation.md
spec/09-05-26-auth-coverage/: audit.md  plan.md  requirements.md  validation.md
spec/09-05-26-frontend-publico-server/: plan.md  requirements.md  validation.md
spec/09-05-26-robot-publico-wiring/: plan.md  requirements.md  validation.md
spec/09-05-26-server-hardening/: plan.md  requirements.md  validation.md
spec/09-05-26-streaming-resiliente/: plan.md  requirements.md  validation.md
spec/11-05-26-mjpeg-ws-dual-mode/: plan.md  requirements.md  validation.md
spec/11-05-26-mobile-ux-acceso/: plan.md  requirements.md  validation.md
spec/12-05-26-webcodecs-websocket/: plan.md  requirements.md  validation.md
spec/13-05-26-tls-local-robot/: plan.md  requirements.md  validation.md
spec/18-04-26-device-model-assignment/: plan.md  requirements.md  validation.md
spec/18-04-26-ux-vision/: plan.md  requirements.md  validation.md
spec/20-04-26-camera-disconnect/: plan.md  requirements.md  validation.md
spec/20-04-26-camera-worker/: plan.md  requirements.md  validation.md
spec/20-04-26-model-editing/: plan.md  requirements.md  validation.md
spec/20-04-26-multi-active-models/: plan.md  requirements.md  validation.md
spec/24-04-26-contexto-robot-fundo-ubicacion/: plan.md  requirements.md  validation.md
spec/24-04-26-verificacion-conteo-pesos-estandar/: plan.md  requirements.md  validation.md
spec/25-04-26-grabacion-1080p/: plan.md  requirements.md  validation.md
spec/25-04-26-grabacion-hd/: plan.md  requirements.md  validation.md
spec/25-04-26-grabacion-video/: plan.md  requirements.md  validation.md
spec/27-04-26-resolution-selector/: plan.md  requirements.md  validation.md
spec/27-04-26-webrtc-nvenc-live/: plan.md  requirements.md  validation.md
spec/29-04-26-inference-perf/: current-state.md  plan.md  requirements.md
spec/29-04-26-tensorrt-inference/: plan.md  requirements.md  validation.md
specs/: roadmap.md
tests/: conftest.py  test_auth_coverage.py  test_auth_endpoints.py  test_camera_client.py  test_frontend_serve.py  test_stream_broadcaster.py  test_wc_broadcaster.py
(+102 files in other folders)
