[project]
name = "robot-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.90",
    "requests>=2.32.5",
    "aiortc>=1.14.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "websockets>=13.0",
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.3",
    "python-dotenv>=1.2.2",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
# PyGObject 3.52+ requires the system library girepository-2.0 (only present
# in newer GNOME stacks). Jetson JetPack ships girepository-1.0, so we pin
# to a version line that builds against gobject-introspection-1.0.
# Enable on Jetson with `uv sync --extra gstreamer` so back/services/nvenc_codec.py
# can drive the nvv4l2h264enc encoder for the WebRTC live path.
gstreamer = [
    "PyGObject>=3.46.0,<3.52",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
