[project]
name = "conversion-worker"
version = "0.1.0"
description = "TensorRT engine builder — converts YOLO .pt to FP16 .engine on demand"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.4.11",
    "numpy",
]

[project.scripts]
conversion-worker = "conversion_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
