[project]
name = "recording-worker"
version = "0.1.0"
description = "MP4 recording worker — encodes camera frames to H.264 MP4 via NVENC/PyAV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=12.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# PyGObject 3.52+ requires the system library girepository-2.0 (only present
# in newer GNOME stacks). Jetson JetPack ships girepository-1.0, so we pin
# to a version line that builds against gobject-introspection-1.0.
gstreamer = [
    "PyGObject>=3.46.0,<3.52",
]

[project.scripts]
recording-worker = "recording_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
